<resources>
    <string name="app_name">PictureBlog</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_mail">Mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">Login</string>

    <string name="delete_profile_text">To delete your profile confirm your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="delete_profile_button">Delete profile</string>

    <string name="enter_mail">Enter your Mail</string>
    <string name="reset_pwd_button">Reset Password</string>

    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="login_edit_text">Already Have an account? Log in</string>

    <string name="register_edit_text">Tou don\'t have an account? register here</string>
    <string name="forgot_pwd_edit_text">Forgot password?</string>

    <string name="add_button">ADD</string>
    <string name="add_comment_hint">Write your comment</string>
    <string name="post_image">Post Image</string>

    <string name="post_title_hint">Title</string>
    <string name="post_place_name_hint">Enter place name</string>
    <string name="post_description_hint">Description</string>

    <string name="post_delete_button">Delete</string>

</resources>