<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/popup_user_image"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/et_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popup_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userphoto"
        app:shapeAppearanceOverlay="@style/Circular"></com.google.android.material.imageview.ShapeableImageView>

    <ImageView
        android:id="@+id/map_icon_get_current_location"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/popup_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_place"
        app:layout_constraintTop_toBottomOf="@id/popup_user_image"
        app:srcCompat="@drawable/ic_marker_map"></ImageView>

    <EditText
        android:id="@+id/popup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_edittext_style"
        android:ems="10"
        android:hint="@string/post_title_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/popup_user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_edittext_style"
        android:ems="10"
        android:hint="@string/post_place_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/map_icon_get_current_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_title" />

    <EditText
        android:id="@+id/popup_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_edittext_style"
        android:ems="10"
        android:hint="@string/post_description_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_place" />

    <ImageView
        android:id="@+id/popup_img"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:background="#2d2d2d"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_description"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView

        android:id="@+id/popup_add"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle_bg"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/popup_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_img"
        app:srcCompat="@drawable/ic_black_create" />

    <ProgressBar
        android:id="@+id/popup_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_bg"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:padding="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/popup_add"
        app:layout_constraintStart_toStartOf="@+id/popup_add"
        app:layout_constraintTop_toTopOf="@+id/popup_add" />

</androidx.constraintlayout.widget.ConstraintLayout>